--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     naar Dordrecht. <br>
     Wij hebben een hondje, een boomertje genaamd Noortje.
   </p>
-  <img src="Afbeeldingen/Noortje21.jpg" alt="Ons hondje Noortje" Title="Noortje" Height="450" Width="300">
+  <img src="Noortje21.jpg" alt="Ons hondje Noortje" Title="Noortje" Height="450" Width="300">
 </div>
 </body>
 
